Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.1.2
    (Perks) Fixed a bug where the Lucky perk wasn't adding to success
    (Skills) Tree Feller now works on Mushroom Stems
    (Experience) Wood blocks now give XP and are affected by Tree Feller (6 sided bark blocks)
    (API) Moved XPGainReason from skills to experience package
    (API) Added XpGainSource for tracking sources of XP
    (API) You can now specify XpGainSource when adding xp to players
    (Config) The Extra Stats option for XP bars now overrides the setting for updating XP bars every time XP is gained
    (Config) Added an option for Party XP gains to not update XP bars
    (Config) Added an option for Passive XP gains to not update XP bars (smelting/brewing)

Version 2.1.1
    = Fixed an issue where excavation wasn't using the correct permission node
    = Added protection against AFK fishing
    = Acrobatics now uses much better anti-exploit detection

Version 2.1.0
 + mcMMO now features XP bars! Configurable in experience.yml
 + Locale files now support & codes for colors and formatting!
 + Prevented exploits involving blocks made from entities (snowmen, etc..)
 + Added JSON integration to all Skill Commands
 + Added config setting to enable or disable old mcMMO skill scaling (General.RetroMode) this is on by default for existing installs
 + You can now disable specific skills in coreskills.yml without the need for permissions
 + Added links to mcMMO related websites to various commands
 + Certain elements of mcMMO's UI have been restyled
 + Added the tagline "Overhaul Era" to various locations until 3.0.0 comes out
 + You can now disable mcMMO completely for specific worlds via world_blacklist.txt in /plugins/mcMMO/
 + (WorldGuard) mcMMO now supports worldguard, you can use the flags "mcmmo" and "mcmmo-xp" on regions (they default to on unless otherwise specified)