@@ -4,19 +4,16 @@ import com.gmail.nossr50.datatypes.experience.XPGainReason;
 import com.gmail.nossr50.datatypes.experience.XPGainSource;
 import com.gmail.nossr50.datatypes.player.McMMOPlayer;
 import com.gmail.nossr50.datatypes.skills.PrimarySkillType;
-import com.gmail.nossr50.util.skills.PerksUtils;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
 
 public abstract class SkillManager {
     protected McMMOPlayer mcMMOPlayer;
-    protected int activationChance;
     protected PrimarySkillType skill;
 
     public SkillManager(McMMOPlayer mcMMOPlayer, PrimarySkillType skill) {
         this.mcMMOPlayer = mcMMOPlayer;
-        this.activationChance = PerksUtils.handleLuckyPerks(mcMMOPlayer.getPlayer(), skill);
         this.skill = skill;
     }
 
